--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            var elems = document.querySelectorAll('select');
+            let elems = document.querySelectorAll('select');
             M.FormSelect.init(elems);
         });
     </script>
